# base_c

./: .gitattributes  .gitignore  AGENTS.md  AGENTS_verbose.md  CMakeLists.txt  _commit.sh  _defines.py  _defines_example.h  zip
_docs/: common_rules.md
apps/: hello.cpp
config/: config.h
hardware/: CMakeLists.txt  hardware.h
hardware/pan_tilt/: pan_tilt.h  pan_tilt_probe.cpp
hardware/pan_tilt/pan_tilt_stepper/: pan_tilt_stepper.cpp  pan_tilt_stepper.h
hardware/pan_tlt/: pan_tlt.h  pan_tlt_probe.cpp
hardware/pan_tlt/pan_tlt_stepper/: pan_tlt_stepper.cpp  pan_tlt_stepper.h  pan_tlt_stepper_cfg.cpp
hardware/rpi4/: rpi4_probe.cpp
hardware/stepper_motor/: main_probe.cpp
lib/: csvlib.cpp  csvlib.h  execlib.cpp  execlib.h  filelib.cpp  filelib.h  info.h  info.md  mathlib.cpp  mathlib.h  strlib.cpp  strlib.h  time.cpp  time.h
lib/json/: json.cpp  json.h
lib/json/_probes/: jlist.cpp  jsoncpp.cpp  jsoncpp_append.cpp
os/: linux_diagnostics.cpp  linux_diagnostics.h
